colors/templates/service.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  namespace: default
  name: colors
  labels:
    app: colors
spec:
  replicas: 5
  selector:
    matchLabels:
      app: colors
  template:
    metadata:
      labels:
        app: colors
    spec:
      containers:
        - name: colors
          image: particule/simplecolorapi:2.0
          ports:
            - name: web
              containerPort: 5000
  strategy:
    canary:
      analysis:
        templates:
          - templateName: webchecks
      args:
        - name host
          value: colorapi
      steps:
        - setWeight: 20
        - pause:
            duration: "30s"
        - setWeight: 50
        - pause:
            duration: "30s"
