colors/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-colors
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
    - host: colors.meyerzuwestram.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colors
                port: 
                  number: 80
  tls:
    - hosts:
        - colors.meyerzuwestram.net
      secretName: colors-tls
